<resources>
    <string name="app_name">ZeitApp</string>
    //main menu Buttons
    <string name="AppName">Zeiterfassung</string>
    <string name="MainMenuButton1">S T A R T E N</string>
    <string name="MainMenuCreditButtonText">C R E D I T </string>
    <string name="MainMenuHowToUseButtonText">H O W  T O  U S E</string>
    //Weekdays
    <string name="monday">Montag</string>
    <string name="tuesday">Dienstag</string>
    <string name="wednesday">Mittwoch</string>
    <string name="thursday">Donnerstag</string>
    <string name="friday">Freitag</string>
    //END Weekdays

    //Wochenübersicht Strings
    <string name="defaultTime">0:00</string>
    <string name="defaultDate">01/01/1999</string>
    <string name="weekOverviewTitle">Wochenübersicht</string>
    <string name="weekOverviewDays">Tage</string>
    <string name="weekOverviewWorktime">Arbeitszeit</string>
    //END Wochenübersicht Strings
    <string name="MainButton4"> HELLO</string>
    <string name="zurück"> Z U R Ü C K</string>
    <string name="weiter"> W E I T E R</string>
    <string name="stundenplan"> A R B E I T S Z E I T</string>
    <string name="saveButton">Speichern</string>

    <string name="startzeit"> A N F A N G S Z E I T </string>
    <string name="endzeit"> E N D Z E I T </string>
    <string name="datum"> D A T U M </string>
    <string name="extra"> WEITERE EINGABE</string>
    <string name="hint1"> Hier wird das aktuelle Datum eingegeben </string>
    <string name="hint2"> Hier wird die Anfangsuhrzeit eingegeben </string>
    <string name="hint3"> Hier wird die Enduhrzeit eingegeben </string>
    <string name="hint4"> Hier wird der Tag der Woche eingegeben </string>
    <string name="tag"> T A G </string>
    <string-array name="name">
        <item>VOLLZEIT</item>
        <item>TEILZEIT</item>
        <item>STUDENT/AUSZUBILDENDER</item>
    </string-array>
    //ERRORS
    <string name="ErrorWrongTimeFormat">Falsche Zeiteingabe</string>

</resources>
