<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/HowToUseButton"
        style="@style/PrimaryColoredButton"
        android:layout_width="184dp"
        android:layout_height="88dp"
        android:layout_marginTop="48dp"
        android:text="@string/MainMenuHowToUseButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppStart" />

    <Button
        android:id="@+id/AppStart"
        style="@style/PrimaryColoredButton"
        android:layout_width="184dp"
        android:layout_height="88dp"
        android:layout_marginTop="48dp"
        android:text="@string/MainMenuButton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/CreditButton"
        style="@style/PrimaryColoredButton"
        android:layout_width="184dp"
        android:layout_height="88dp"
        android:layout_marginTop="48dp"
        android:text="@string/MainMenuCreditButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HowToUseButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="204dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/AppName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>