<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Start">

    <Button
        android:id="@+id/weiter"
        style="@style/PrimaryColoredButton"
        android:layout_width="127dp"
        android:layout_height="66dp"
        android:layout_marginTop="568dp"
        android:text="@string/weiter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:background="#45FFEA00"
        android:backgroundTint="#85EC0C0C"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/tag"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <EditText
        android:id="@+id/anfang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:background="#45FFEA00"
        android:backgroundTint="#85EC0C0C"
        android:backgroundTintMode="multiply"
        android:ems="10"
        android:fallbackLineSpacing="false"
        android:gravity="center"
        android:hapticFeedbackEnabled="false"
        android:hint="@string/startzeit"
        android:inputType="time"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.183" />

    <EditText
        android:id="@+id/ende"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="264dp"
        android:background="#45FFEA00"
        android:backgroundTint="#85EC0C0C"
        android:backgroundTintMode="multiply"
        android:ems="10"
        android:fallbackLineSpacing="false"
        android:gravity="center"
        android:hapticFeedbackEnabled="false"
        android:hint="@string/endzeit"
        android:inputType="time"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />

    <Spinner
        android:id="@+id/stundenplan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"

        android:backgroundTint="#85EC0C0C"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:textSize="25dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginTop="152dp"
        android:background="#45FFEA00"
        android:backgroundTint="#85EC0C0C"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:hint="@string/datum"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

</androidx.constraintlayout.widget.ConstraintLayout>